--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
   <span class="linkText1"><a href="https://coopbot.xyz">Page</a></span>
   <span class="linkSeparator">/</span>
-  <span class="linkText2"><a href="privacy">Privacy</a></span>
+  <span class="linkText2"><a href="/">Privacy</a></span>
 
   <br><br><br>
 
-  <span class="titleHome"><a href="privacy">Politique de confidentialité</a></span>
+  <span class="titleHome"><a href="/">Politique de confidentialité</a></span>
 
   <br><br><br>
 
@@ -74,8 +74,8 @@
     <div id="bar1"></div>
     
     <li><a href="https://coopbot.xyz">Accueil</a></li>
-    <li><a href="logs">Mises à jour</a></li>
-    <li><a href="terms">Conditions d'utilisation</a></li>
+    <li><a href="https://coopbot.xyz/logs">Mises à jour</a></li>
+    <li><a href="https://coopbot.xyz/terms">Conditions d'utilisation</a></li>
 
     <div id="bar2"></div>
 
@@ -85,17 +85,17 @@
       </a>
     </li>
     <div id="commands-column1" class="openmenu" style="display: none;">
-      <li><a href="systems/introduction"><strong></strong> Introduction</a></li>
-      <li><a href="systems/custom"><strong></strong> Customisation de profil</a></li>
-      <li><a href="systems/economy"><strong></strong> Économie</a></li>
-      <li><a href="systems/experience"><strong></strong> Expérience</a></li>
-      <li><a href="systems/giveaways"><strong></strong> Giveaways</a></li>
-      <li><a href="systems/rolerewards"><strong></strong> Récompenses de niveaux</a></li>
-      <li><a href="systems/shop"><strong></strong> Boutique</a></li>
-      <li><a href="systems/suggestions"><strong></strong> Suggestions</a></li>
-      <li><a href="systems/tickets"><strong></strong> Tickets</a></li>
-      <li><a href="systems/updates"><strong></strong> Mises à jour</a></li>
-      <li><a href="systems/welcome"><strong></strong> Message de Bienvenue</a></li>
+      <li><a href="https://coopbot.xyz/systems/introduction"><strong></strong> Introduction</a></li>
+      <li><a href="https://coopbot.xyz/systems/custom"><strong></strong> Customisation de profil</a></li>
+      <li><a href="https://coopbot.xyz/systems/economy"><strong></strong> Économie</a></li>
+      <li><a href="https://coopbot.xyz/systems/experience"><strong></strong> Expérience</a></li>
+      <li><a href="https://coopbot.xyz/systems/giveaways"><strong></strong> Giveaways</a></li>
+      <li><a href="https://coopbot.xyz/systems/rolerewards"><strong></strong> Récompenses de niveaux</a></li>
+      <li><a href="https://coopbot.xyz/systems/shop"><strong></strong> Boutique</a></li>
+      <li><a href="https://coopbot.xyz/systems/suggestions"><strong></strong> Suggestions</a></li>
+      <li><a href="https://coopbot.xyz/systems/tickets"><strong></strong> Tickets</a></li>
+      <li><a href="https://coopbot.xyz/systems/updates"><strong></strong> Mises à jour</a></li>
+      <li><a href="https://coopbot.xyz/systems/welcome"><strong></strong> Message de Bienvenue</a></li>
     </div>
   
     <li><a><strong>2.</strong> Commandes Slash</a>
@@ -104,79 +104,79 @@
       </a>
     </li>
     <div id="commands-column2" class="openmenu" style="display: none;">
-      <li><a href="commands/introduction"><strong></strong> Introduction</a></li>
-      <li><a href="commands/achievement"><strong></strong> /achievement</a></li>
-      <li><a href="commands/auction"><strong></strong> /auction</a></li>
-      <li><a href="commands/auctionbet"><strong></strong> /auctionbet</a></li>
-      <li><a href="commands/bet"><strong></strong> /bet</a></li>
-      <li><a href="commands/buy"><strong></strong> /buy</a></li>
-      <li><a href="commands/captcha"><strong></strong> /captcha</a></li>
-      <li><a href="commands/clear"><strong></strong> /clear</a></li>
-      <li><a href="commands/close"><strong></strong> /close</a></li>
-      <li><a href="commands/coinflip"><strong></strong> /coinflip</a></li>
-      <li><a href="commands/createthread"><strong></strong> /createthread</a></li>
-      <li><a href="commands/daily"><strong></strong> /daily</a></li>
-      <li><a href="commands/deposit"><strong></strong> /deposit</a></li>
-      <li><a href="commands/description"><strong></strong> /description</a></li>
-      <li><a href="commands/disable"><strong></strong> /disable</a></li>
-      <li><a href="commands/donate"><strong></strong> /donate</a></li>
-      <li><a href="commands/drop"><strong></strong> /drop</a></li>
-      <li><a href="commands/editshop"><strong></strong> /editshop</a></li>
-      <li><a href="commands/embed"><strong></strong> /embed</a></li>
-      <li><a href="commands/enable"><strong></strong> /enable</a></li>
-      <li><a href="commands/endauction"><strong></strong> /endauction</a></li>
-      <li><a href="commands/endgiveaway"><strong></strong> /endgiveaway</a></li>
-      <li><a href="commands/feed"><strong></strong> /feed</a></li>
-      <li><a href="commands/give"><strong></strong> /give</a></li>
-      <li><a href="commands/giveaway"><strong></strong> /giveaway</a></li>
-      <li><a href="commands/help"><strong></strong> /help</a></li>
-      <li><a href="commands/hug"><strong></strong> /hug</a></li>
-      <li><a href="commands/infos"><strong></strong> /infos</a></li>
-      <li><a href="commands/invite"><strong></strong> /invite</a></li>
-      <li><a href="commands/kiss"><strong></strong> /kiss</a></li>
-      <li><a href="commands/level"><strong></strong> /level</a></li>
-      <li><a href="commands/locate"><strong></strong> /locate</a></li>
-      <li><a href="commands/lock"><strong></strong> /lock</a></li>
-      <li><a href="commands/manage"><strong></strong> /manage</a></li>
-      <li><a href="commands/money"><strong></strong> /money</a></li>
-      <li><a href="commands/morpion"><strong></strong> /morpion</a></li>
-      <li><a href="commands/panel"><strong></strong> /panel</a></li>
-      <li><a href="commands/pat"><strong></strong> /pat</a></li>
-      <li><a href="commands/play"><strong></strong> /play</a></li>
-      <li><a href="commands/poll"><strong></strong> /poll</a></li>
-      <li><a href="commands/profile"><strong></strong> /profile</a></li>
-      <li><a href="commands/reactrole"><strong></strong> /reactrole</a></li>
-      <li><a href="commands/report"><strong></strong> /report</a></li>
-      <li><a href="commands/rewards"><strong></strong> /rewards</a></li>
-      <li><a href="commands/rob"><strong></strong> /rob</a></li>
-      <li><a href="commands/rulepanel"><strong></strong> /rulepanel</a></li>
-      <li><a href="commands/say"><strong></strong> /say</a></li>
-      <li><a href="commands/scratch"><strong></strong> /scratch</a></li>
-      <li><a href="commands/search"><strong></strong> /search</a></li>
-      <li><a href="commands/setcaptcha"><strong></strong> /setcaptcha</a></li>
-      <li><a href="commands/setlevel"><strong></strong> /setlevel</a></li>
-      <li><a href="commands/setmoney"><strong></strong> /setmoney</a></li>
-      <li><a href="commands/setrewards"><strong></strong> /setrewards</a></li>
-      <li><a href="commands/setrules"><strong></strong> /setrules</a></li>
-      <li><a href="commands/setsuggest"><strong></strong> /setsuggest</a></li>
-      <li><a href="commands/setwelcome"><strong></strong> /setwelcome</a></li>
-      <li><a href="commands/shop"><strong></strong> /shop</a></li>
-      <li><a href="commands/slap"><strong></strong> /slap</a></li>
-      <li><a href="commands/suggest"><strong></strong> /suggest</a></li>
-      <li><a href="commands/suggestmod"><strong></strong> /suggestmod</a></li>
-      <li><a href="commands/support"><strong></strong> /support</a></li>
-      <li><a href="commands/tickle"><strong></strong> /tickle</a></li>
-      <li><a href="commands/timeout"><strong></strong> /timeout</a></li>
-      <li><a href="commands/toplevel"><strong></strong> /toplevel</a></li>
-      <li><a href="commands/topmoney"><strong></strong> /topmoney</a></li>
-      <li><a href="commands/unlock"><strong></strong> /unlock</a></li>
-      <li><a href="commands/untimeout"><strong></strong> /untimeout</a></li>
-      <li><a href="commands/updates"><strong></strong> /updates</a></li>
-      <li><a href="commands/updatesbeta"><strong></strong> /updatesbêta</a></li>
-      <li><a href="commands/userinfo"><strong></strong> /userinfo</a></li>
-      <li><a href="commands/vote"><strong></strong> /vote</a></li>
-      <li><a href="commands/withdraw"><strong></strong> /withdraw</a></li>
-      <li><a href="commands/work"><strong></strong> /work</a></li>
+      <li><a href="https://coopbot.xyz/commands/introduction"><strong></strong> Introduction</a></li>
+      <li><a href="https://coopbot.xyz/commands/achievement"><strong></strong> /achievement</a></li>
+      <li><a href="https://coopbot.xyz/commands/auction"><strong></strong> /auction</a></li>
+      <li><a href="https://coopbot.xyz/commands/auctionbet"><strong></strong> /auctionbet</a></li>
+      <li><a href="https://coopbot.xyz/commands/bet"><strong></strong> /bet</a></li>
+      <li><a href="https://coopbot.xyz/commands/buy"><strong></strong> /buy</a></li>
+      <li><a href="https://coopbot.xyz/commands/captcha"><strong></strong> /captcha</a></li>
+      <li><a href="https://coopbot.xyz/commands/clear"><strong></strong> /clear</a></li>
+      <li><a href="https://coopbot.xyz/commands/close"><strong></strong> /close</a></li>
+      <li><a href="https://coopbot.xyz/commands/coinflip"><strong></strong> /coinflip</a></li>
+      <li><a href="https://coopbot.xyz/commands/createthread"><strong></strong> /createthread</a></li>
+      <li><a href="https://coopbot.xyz/commands/daily"><strong></strong> /daily</a></li>
+      <li><a href="https://coopbot.xyz/commands/deposit"><strong></strong> /deposit</a></li>
+      <li><a href="https://coopbot.xyz/commands/description"><strong></strong> /description</a></li>
+      <li><a href="https://coopbot.xyz/commands/disable"><strong></strong> /disable</a></li>
+      <li><a href="https://coopbot.xyz/commands/donate"><strong></strong> /donate</a></li>
+      <li><a href="https://coopbot.xyz/commands/drop"><strong></strong> /drop</a></li>
+      <li><a href="https://coopbot.xyz/commands/editshop"><strong></strong> /editshop</a></li>
+      <li><a href="https://coopbot.xyz/commands/embed"><strong></strong> /embed</a></li>
+      <li><a href="https://coopbot.xyz/commands/enable"><strong></strong> /enable</a></li>
+      <li><a href="https://coopbot.xyz/commands/endauction"><strong></strong> /endauction</a></li>
+      <li><a href="https://coopbot.xyz/commands/endgiveaway"><strong></strong> /endgiveaway</a></li>
+      <li><a href="https://coopbot.xyz/commands/feed"><strong></strong> /feed</a></li>
+      <li><a href="https://coopbot.xyz/commands/give"><strong></strong> /give</a></li>
+      <li><a href="https://coopbot.xyz/commands/giveaway"><strong></strong> /giveaway</a></li>
+      <li><a href="https://coopbot.xyz/commands/help"><strong></strong> /help</a></li>
+      <li><a href="https://coopbot.xyz/commands/hug"><strong></strong> /hug</a></li>
+      <li><a href="https://coopbot.xyz/commands/infos"><strong></strong> /infos</a></li>
+      <li><a href="https://coopbot.xyz/commands/invite"><strong></strong> /invite</a></li>
+      <li><a href="https://coopbot.xyz/commands/kiss"><strong></strong> /kiss</a></li>
+      <li><a href="https://coopbot.xyz/commands/level"><strong></strong> /level</a></li>
+      <li><a href="https://coopbot.xyz/commands/locate"><strong></strong> /locate</a></li>
+      <li><a href="https://coopbot.xyz/commands/lock"><strong></strong> /lock</a></li>
+      <li><a href="https://coopbot.xyz/commands/manage"><strong></strong> /manage</a></li>
+      <li><a href="https://coopbot.xyz/commands/money"><strong></strong> /money</a></li>
+      <li><a href="https://coopbot.xyz/commands/morpion"><strong></strong> /morpion</a></li>
+      <li><a href="https://coopbot.xyz/commands/panel"><strong></strong> /panel</a></li>
+      <li><a href="https://coopbot.xyz/commands/pat"><strong></strong> /pat</a></li>
+      <li><a href="https://coopbot.xyz/commands/play"><strong></strong> /play</a></li>
+      <li><a href="https://coopbot.xyz/commands/poll"><strong></strong> /poll</a></li>
+      <li><a href="https://coopbot.xyz/commands/profile"><strong></strong> /profile</a></li>
+      <li><a href="https://coopbot.xyz/commands/reactrole"><strong></strong> /reactrole</a></li>
+      <li><a href="https://coopbot.xyz/commands/report"><strong></strong> /report</a></li>
+      <li><a href="https://coopbot.xyz/commands/rewards"><strong></strong> /rewards</a></li>
+      <li><a href="https://coopbot.xyz/commands/rob"><strong></strong> /rob</a></li>
+      <li><a href="https://coopbot.xyz/commands/rulepanel"><strong></strong> /rulepanel</a></li>
+      <li><a href="https://coopbot.xyz/commands/say"><strong></strong> /say</a></li>
+      <li><a href="https://coopbot.xyz/commands/scratch"><strong></strong> /scratch</a></li>
+      <li><a href="https://coopbot.xyz/commands/search"><strong></strong> /search</a></li>
+      <li><a href="https://coopbot.xyz/commands/setcaptcha"><strong></strong> /setcaptcha</a></li>
+      <li><a href="https://coopbot.xyz/commands/setlevel"><strong></strong> /setlevel</a></li>
+      <li><a href="https://coopbot.xyz/commands/setmoney"><strong></strong> /setmoney</a></li>
+      <li><a href="https://coopbot.xyz/commands/setrewards"><strong></strong> /setrewards</a></li>
+      <li><a href="https://coopbot.xyz/commands/setrules"><strong></strong> /setrules</a></li>
+      <li><a href="https://coopbot.xyz/commands/setsuggest"><strong></strong> /setsuggest</a></li>
+      <li><a href="https://coopbot.xyz/commands/setwelcome"><strong></strong> /setwelcome</a></li>
+      <li><a href="https://coopbot.xyz/commands/shop"><strong></strong> /shop</a></li>
+      <li><a href="https://coopbot.xyz/commands/slap"><strong></strong> /slap</a></li>
+      <li><a href="https://coopbot.xyz/commands/suggest"><strong></strong> /suggest</a></li>
+      <li><a href="https://coopbot.xyz/commands/suggestmod"><strong></strong> /suggestmod</a></li>
+      <li><a href="https://coopbot.xyz/commands/support"><strong></strong> /support</a></li>
+      <li><a href="https://coopbot.xyz/commands/tickle"><strong></strong> /tickle</a></li>
+      <li><a href="https://coopbot.xyz/commands/timeout"><strong></strong> /timeout</a></li>
+      <li><a href="https://coopbot.xyz/commands/toplevel"><strong></strong> /toplevel</a></li>
+      <li><a href="https://coopbot.xyz/commands/topmoney"><strong></strong> /topmoney</a></li>
+      <li><a href="https://coopbot.xyz/commands/unlock"><strong></strong> /unlock</a></li>
+      <li><a href="https://coopbot.xyz/commands/untimeout"><strong></strong> /untimeout</a></li>
+      <li><a href="https://coopbot.xyz/commands/updates"><strong></strong> /updates</a></li>
+      <li><a href="https://coopbot.xyz/commands/updatesbeta"><strong></strong> /updatesbêta</a></li>
+      <li><a href="https://coopbot.xyz/commands/userinfo"><strong></strong> /userinfo</a></li>
+      <li><a href="https://coopbot.xyz/commands/vote"><strong></strong> /vote</a></li>
+      <li><a href="https://coopbot.xyz/commands/withdraw"><strong></strong> /withdraw</a></li>
+      <li><a href="https://coopbot.xyz/commands/work"><strong></strong> /work</a></li>
     </div>
 
     <li><a><strong>3.</strong> Serveur Support</a>
@@ -185,12 +185,12 @@
       </a>
     </li>
     <div id="commands-column3" class="openmenu" style="display: none;">
-      <li><a href="infos/introduction"><strong></strong> Introduction</a></li>
-      <li><a href="infos/discover"><strong></strong> Découvrir</a></li>
-      <li><a href="infos/support"><strong></strong> Soutenir</a></li>
-      <li><a href="infos/beta"><strong></strong> Rejoindre la Bêta</a></li>
-      <li><a href="infos/grade"><strong></strong> Recevoir un Grade acheté</a></li>
-      <li><a href="infos/donate"><strong></strong> Devenir Donateur</a></li>
+      <li><a href="https://coopbot.xyz/infos/introduction"><strong></strong> Introduction</a></li>
+      <li><a href="https://coopbot.xyz/infos/discover"><strong></strong> Découvrir</a></li>
+      <li><a href="https://coopbot.xyz/infos/support"><strong></strong> Soutenir</a></li>
+      <li><a href="https://coopbot.xyz/infos/beta"><strong></strong> Rejoindre la Bêta</a></li>
+      <li><a href="https://coopbot.xyz/infos/grade"><strong></strong> Recevoir un Grade acheté</a></li>
+      <li><a href="https://coopbot.xyz/infos/donate"><strong></strong> Devenir Donateur</a></li>
     </div>
 
     <li><a><strong>4.</strong> Aide</a>
@@ -199,10 +199,10 @@
       </a>
     </li>
     <div id="commands-column4" class="openmenu" style="display: none;">
-      <li><a href="helps/introduction"><strong></strong> Introduction</a></li>
-      <li><a href="helps/config"><strong></strong> Configuration</a></li>
-      <li><a href="helps/perms"><strong></strong> Permissions</a></li>
-      <li><a href="helps/github"><strong></strong> Github</a></li>
+      <li><a href="https://coopbot.xyz/helps/introduction"><strong></strong> Introduction</a></li>
+      <li><a href="https://coopbot.xyz/helps/config"><strong></strong> Configuration</a></li>
+      <li><a href="https://coopbot.xyz/helps/perms"><strong></strong> Permissions</a></li>
+      <li><a href="https://coopbot.xyz/helps/github"><strong></strong> Github</a></li>
     </div>
   </ul>
   <button id="btn1" onclick="switchTheme('theme1')">Classic</button>
